@@ -93,12 +93,65 @@ public class VillageLivingConditionService {
         if (id != null) {
             villageLivingConditionsList = villageLivingConditionsList.stream()
                     .filter(assertion -> id.equals(assertion.getVillage().getId()))
-                    .collect(Collectors.toList());
+                    .toList();
         }
         return villageLivingConditionsList.stream()
                 .map(this::toDTO)
                 .toList();
     }
+
+    public double getVillagePopulationAssertionByVillageIdValue(Long id) {
+        List<VillageLivingConditions> villageLivingConditionsList = villageLivingConditionRepository.findAll();
+        if (id != null) {
+            villageLivingConditionsList = villageLivingConditionsList.stream()
+                    .filter(assertion -> id.equals(assertion.getVillage().getId()))
+                    .toList();
+        }
+        double sum = 0;
+        int count = Math.min(8, villageLivingConditionsList.size()); // Вземаме минимумът между 8 и броя на отговорите
+        for (int i = 0; i < count; i++) { // Променено условие за цикъла
+            sum += villageLivingConditionsList.get(i).getConsents().getValue();
+        }
+        double average = sum / count; // Променен делител
+        return Math.round(average * 100) / 100.0;
+    }
+
+
+    public double getVillagePopulationAssertionByVillageIdDelinquencyValue(Long id) {
+        List<VillageLivingConditions> villageLivingConditionsList = villageLivingConditionRepository.findAll();
+        if (id != null) {
+            villageLivingConditionsList = villageLivingConditionsList.stream()
+                    .filter(assertion -> id.equals(assertion.getVillage().getId()))
+                    .toList();
+        }
+        for (VillageLivingConditions condition : villageLivingConditionsList) {
+            if (condition.getLivingCondition().getLivingConditionName().equals("в селото няма престъпност")) {
+                return Math.abs(condition.getConsents().getValue() - 100);
+            }
+        }
+        return -1;
+    }
+
+    public double getVillagePopulationAssertionByVillageIdEcoValue(Long id) {
+        List<VillageLivingConditions> villageLivingConditionsList = villageLivingConditionRepository.findAll();
+        if (id != null) {
+            villageLivingConditionsList = villageLivingConditionsList.stream()
+                    .filter(assertion -> id.equals(assertion.getVillage().getId()))
+                    .toList();
+        }
+        double sum = 0;
+        int count = Math.min(13, villageLivingConditionsList.size());
+        for (int i = 0; i < count; i++) {
+            if (i >= 11) {
+                sum += villageLivingConditionsList.get(i).getConsents().getValue();
+            }
+        }
+        double average = sum / (count - 11);
+        return Math.round(average * 100) / 100.0;
+    }
+
+
+
 
 
 }
